# OTA_UPDATE_FPGA_USING_ESP32

./: .gitignore  CMakeLists.txt  Makefile  README.md  example_common.c  flasher.c  partitions_example.csv  sample.txt  sdkconfig  sdkconfig.old
bootloader_override/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
bootloader_override/bootloader_components/main/: CMakeLists.txt  Makefile  bootloader_start.c
bootloader_override/main/: bootloader_override_example_main.c
frontend/: index.html
main/: CMakeLists.txt  component.mk  fileserver.c  flasher.c
main/include/: flasher.h
